[gd_scene load_steps=6 format=3 uid="uid://bcvjcxqbr0juc"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_qkwr4"]
[ext_resource type="TileSet" uid="uid://cumg5e2020i1" path="res://resources/map_tileset.tres" id="1_tpmgj"]
[ext_resource type="PackedScene" uid="uid://0hutsbs2jt8r" path="res://scenes/game_object/pac_man/pac_man.tscn" id="3_nwd3b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cext"]
size = Vector2(32, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ep73l"]
size = Vector2(32, 48)

[node name="Main" type="Node"]
script = ExtResource("1_qkwr4")

[node name="Map" type="TileMap" parent="."]
tile_set = ExtResource("1_tpmgj")
format = 2
layer_0/tile_data = PackedInt32Array(196608, 1, 0, 262144, 851969, 2, 327680, 851969, 2, 393216, 851969, 2, 458752, 851969, 2, 524288, 851969, 2, 589824, 851969, 2, 1441792, 1, 0, 1507328, 851969, 2, 1572864, 851969, 2, 1638400, 851969, 2, 1703936, 851969, 2, 1769472, 851969, 0, 1835008, 851969, 1, 1900544, 851969, 2, 1966080, 851969, 2, 196610, 720897, 0, 393218, 1, 5, 458754, 262145, 4, 589826, 1, 4, 1441794, 720897, 0, 1572866, 1, 4, 1638402, 262145, 4, 1769474, 196609, 3, 1835010, 196609, 4, 1966082, 262145, 3, 196611, 720897, 0, 393219, 131073, 5, 458755, 131073, 4, 589827, 131073, 3, 1441795, 720897, 0, 1966083, 131073, 3, 196612, 720897, 0, 393220, 131073, 5, 458756, 131073, 4, 589828, 131073, 3, 1441796, 720897, 0, 1572868, 131073, 3, 1638404, 393217, 4, 1769476, 1, 5, 1835012, 1, 3, 1966084, 131073, 3, 196613, 720897, 0, 393221, 65537, 5, 458757, 196609, 4, 589829, 65537, 4, 655365, 196609, 4, 786437, 327681, 0, 851973, 851969, 2, 983045, 851969, 2, 1048581, 327681, 1, 1179653, 327681, 0, 1245189, 851969, 2, 1376261, 851969, 2, 1441797, 327681, 1, 1572869, 327681, 0, 1638405, 65537, 5, 1769477, 65537, 5, 1835013, 65537, 3, 1966085, 131073, 3, 1966086, 131073, 3, 196615, 720897, 0, 393223, 1, 5, 458759, 262145, 4, 589831, 1, 4, 655367, 1, 5, 720903, 1, 5, 786439, 1, 5, 1179655, 1, 4, 1245191, 1, 5, 1376263, 1, 5, 1441799, 1, 3, 1572871, 262145, 3, 1638407, 262145, 4, 1769479, 1, 4, 1835015, 1, 5, 1966087, 393217, 3, 196616, 720897, 0, 393224, 131073, 5, 458760, 131073, 4, 589832, 65537, 4, 655368, 65537, 5, 720904, 65537, 5, 786440, 458753, 3, 1179656, 65537, 4, 1245192, 65537, 5, 1376264, 65537, 5, 1441800, 65537, 3, 1572872, 131073, 3, 1638408, 131073, 4, 1769480, 65537, 4, 1835016, 65537, 5, 1966088, 458753, 3, 196617, 720897, 0, 1966089, 131073, 3, 196618, 720897, 0, 393226, 131073, 5, 458762, 131073, 4, 589834, 1, 4, 655370, 262145, 4, 786442, 131073, 3, 851978, 131073, 4, 983050, 131073, 0, 1048586, 917505, 2, 1179658, 917505, 2, 1245194, 131073, 1, 1376266, 1, 4, 1441802, 262145, 4, 1572874, 131073, 3, 1638410, 131073, 4, 1769482, 1, 4, 1835018, 262145, 4, 1966090, 131073, 3, 196619, 720897, 0, 393227, 65537, 5, 458763, 196609, 4, 589835, 131073, 3, 655371, 131073, 4, 786443, 196609, 3, 1245195, 720897, 0, 1376267, 131073, 3, 1441803, 131073, 4, 1572875, 196609, 3, 1638411, 196609, 4, 1769483, 131073, 3, 1835019, 131073, 4, 1966091, 196609, 3, 1245196, 720897, 0, 196621, 589825, 0, 262157, 1, 5, 327693, 1, 5, 393229, 1, 5, 458765, 1, 3, 589837, 131073, 3, 655373, 393217, 4, 786445, 1, 5, 1245197, 720897, 0, 1376269, 131073, 3, 1441805, 393217, 4, 1572877, 1, 5, 1638413, 1, 3, 1769485, 131073, 3, 1835021, 393217, 4, 1966093, 1, 5, 196622, 655361, 0, 262158, 65537, 5, 327694, 65537, 5, 393230, 65537, 5, 458766, 65537, 3, 589838, 131073, 3, 655374, 458753, 4, 786446, 65537, 5, 1245198, 720897, 0, 1376270, 131073, 3, 1441806, 458753, 4, 1572878, 65537, 5, 1638414, 65537, 3, 1769486, 131073, 3, 1835022, 458753, 4, 1966094, 65537, 5, 1245199, 720897, 0, 196624, 720897, 0, 393232, 1, 5, 458768, 262145, 4, 589840, 131073, 3, 655376, 131073, 4, 786448, 262145, 3, 1245200, 720897, 0, 1376272, 131073, 3, 1441808, 131073, 4, 1572880, 262145, 3, 1638416, 262145, 4, 1769488, 131073, 3, 1835024, 131073, 4, 1966096, 262145, 3, 196625, 720897, 0, 393233, 131073, 5, 458769, 131073, 4, 589841, 65537, 4, 655377, 196609, 4, 786449, 131073, 3, 851985, 131073, 4, 983057, 196609, 0, 1048593, 851969, 2, 1179665, 851969, 2, 1245201, 196609, 1, 1376273, 65537, 4, 1441809, 196609, 4, 1572881, 131073, 3, 1638417, 131073, 4, 1769489, 65537, 4, 1835025, 196609, 4, 1966097, 131073, 3, 196626, 720897, 0, 1966098, 131073, 3, 196627, 720897, 0, 393235, 131073, 5, 458771, 131073, 4, 589843, 1, 4, 655379, 1, 5, 720915, 1, 5, 786451, 393217, 3, 917523, 1, 5, 983059, 1, 5, 1245203, 1, 5, 1376275, 1, 5, 1441811, 1, 3, 1572883, 131073, 3, 1638419, 131073, 4, 1769491, 1, 4, 1835027, 1, 5, 1966099, 393217, 3, 196628, 720897, 0, 393236, 65537, 5, 458772, 196609, 4, 589844, 65537, 4, 655380, 65537, 5, 720916, 65537, 5, 786452, 65537, 5, 917524, 65537, 5, 983060, 65537, 5, 1245204, 65537, 5, 1376276, 65537, 5, 1441812, 65537, 3, 1572884, 196609, 3, 1638420, 196609, 4, 1769492, 65537, 4, 1835028, 65537, 5, 1966100, 458753, 3, 1966101, 131073, 3, 196630, 720897, 0, 393238, 1, 5, 458774, 262145, 4, 589846, 1, 4, 655382, 262145, 4, 786454, 262145, 0, 851990, 917505, 2, 983062, 917505, 2, 1048598, 262145, 1, 1179670, 262145, 0, 1245206, 917505, 2, 1376278, 917505, 2, 1441814, 262145, 1, 1572886, 262145, 0, 1638422, 1, 5, 1769494, 1, 5, 1835030, 1, 3, 1966102, 131073, 3, 196631, 720897, 0, 393239, 131073, 5, 458775, 131073, 4, 589847, 131073, 3, 1441815, 720897, 0, 1572887, 131073, 3, 1638423, 458753, 4, 1769495, 65537, 5, 1835031, 65537, 3, 1966103, 131073, 3, 196632, 720897, 0, 393240, 131073, 5, 458776, 131073, 4, 589848, 131073, 3, 1441816, 720897, 0, 1966104, 131073, 3, 196633, 720897, 0, 393241, 65537, 5, 458777, 196609, 4, 589849, 65537, 4, 1441817, 720897, 0, 1572889, 196609, 3, 1638425, 196609, 4, 1769497, 1, 4, 1835033, 262145, 4, 1966105, 196609, 3, 196635, 65537, 0, 262171, 917505, 2, 327707, 917505, 2, 393243, 917505, 2, 458779, 917505, 2, 524315, 917505, 2, 589851, 917505, 2, 1441819, 65537, 0, 1507355, 917505, 2, 1572891, 917505, 2, 1638427, 917505, 2, 1703963, 917505, 2, 1769499, 917505, 0, 1835035, 917505, 1, 1900571, 917505, 2, 1966107, 917505, 2, 655360, 851969, 2, 720896, 851969, 2, 786432, 1, 1, 1048576, 720897, 0, 1179648, 720897, 1, 2031616, 851969, 2, 2097152, 851969, 2, 2162688, 1, 1, 196609, 720897, 0, 786433, 720897, 1, 1048577, 720897, 0, 1179649, 720897, 1, 1441793, 720897, 0, 1769473, 131073, 3, 1835009, 131073, 4, 2162689, 720897, 1, 327682, 1, 4, 655362, 262145, 4, 786434, 720897, 1, 1048578, 720897, 0, 1179650, 720897, 1, 2031618, 262145, 4, 2162690, 720897, 1, 327683, 131073, 3, 655363, 131073, 4, 786435, 720897, 1, 1048579, 720897, 0, 1179651, 720897, 1, 1572867, 131073, 3, 1638403, 131073, 4, 2031619, 131073, 4, 2162691, 720897, 1, 327684, 131073, 3, 655364, 131073, 4, 786436, 720897, 1, 1048580, 720897, 0, 1179652, 720897, 1, 1703940, 1, 5, 2031620, 131073, 4, 2162692, 720897, 1, 327685, 65537, 4, 917509, 851969, 2, 1310725, 851969, 2, 1703941, 65537, 5, 2031621, 131073, 4, 2162693, 720897, 1, 196614, 720897, 0, 2031622, 131073, 4, 2162694, 720897, 1, 327687, 1, 4, 851975, 1, 5, 1310727, 1, 5, 1900551, 1, 5, 2031623, 131073, 4, 2162695, 720897, 1, 327688, 131073, 3, 851976, 458753, 4, 1310728, 65537, 5, 1900552, 65537, 5, 2031624, 131073, 4, 2162696, 720897, 1, 327689, 131073, 3, 393225, 131073, 5, 458761, 131073, 4, 786441, 131073, 3, 851977, 131073, 4, 1572873, 131073, 3, 1638409, 131073, 4, 2031625, 131073, 4, 2162697, 720897, 1, 327690, 131073, 3, 1114122, 917505, 2, 2031626, 131073, 4, 2162698, 720897, 1, 327691, 65537, 4, 851979, 196609, 4, 983051, 720897, 1, 2031627, 196609, 4, 2162699, 720897, 1, 196620, 720897, 0, 589836, 131073, 3, 655372, 131073, 4, 983052, 589825, 3, 1376268, 131073, 3, 1441804, 131073, 4, 1769484, 131073, 3, 1835020, 131073, 4, 2162700, 720897, 1, 720909, 1, 5, 851981, 1, 3, 983053, 655361, 3, 1507341, 1, 5, 1900557, 1, 5, 2031629, 1, 3, 2162701, 720897, 1, 720910, 65537, 5, 851982, 65537, 3, 983054, 655361, 3, 1507342, 65537, 5, 1900558, 65537, 5, 2031630, 65537, 3, 2162702, 720897, 1, 196623, 720897, 0, 589839, 131073, 3, 655375, 131073, 4, 983055, 720897, 3, 1376271, 131073, 3, 1441807, 131073, 4, 1769487, 131073, 3, 1835023, 131073, 4, 2162703, 720897, 1, 327696, 1, 4, 851984, 262145, 4, 983056, 720897, 1, 2031632, 262145, 4, 2162704, 720897, 1, 327697, 131073, 3, 1114129, 851969, 2, 2031633, 131073, 4, 2162705, 720897, 1, 327698, 131073, 3, 393234, 131073, 5, 458770, 131073, 4, 786450, 131073, 3, 851986, 131073, 4, 1572882, 131073, 3, 1638418, 131073, 4, 2031634, 131073, 4, 2162706, 720897, 1, 327699, 131073, 3, 851987, 393217, 4, 1310739, 1, 5, 1900563, 1, 5, 2031635, 131073, 4, 2162707, 720897, 1, 327700, 65537, 4, 851988, 65537, 5, 1310740, 65537, 5, 1900564, 65537, 5, 2031636, 131073, 4, 2162708, 720897, 1, 196629, 720897, 0, 2031637, 131073, 4, 2162709, 720897, 1, 327702, 1, 4, 917526, 917505, 2, 1310742, 917505, 2, 1703958, 1, 5, 2031638, 131073, 4, 2162710, 720897, 1, 327703, 131073, 3, 655383, 131073, 4, 786455, 720897, 1, 1048599, 720897, 0, 1179671, 720897, 1, 1703959, 65537, 5, 2031639, 131073, 4, 2162711, 720897, 1, 327704, 131073, 3, 655384, 131073, 4, 786456, 720897, 1, 1048600, 720897, 0, 1179672, 720897, 1, 1572888, 131073, 3, 1638424, 131073, 4, 2031640, 131073, 4, 2162712, 720897, 1, 327705, 65537, 4, 655385, 196609, 4, 786457, 720897, 1, 1048601, 720897, 0, 1179673, 720897, 1, 2031641, 196609, 4, 2162713, 720897, 1, 196634, 720897, 0, 786458, 720897, 1, 1048602, 720897, 0, 1179674, 720897, 1, 1441818, 720897, 0, 1769498, 131073, 3, 1835034, 131073, 4, 2162714, 720897, 1, 655387, 917505, 2, 720923, 917505, 2, 786459, 65537, 1, 1048603, 720897, 0, 1179675, 720897, 1, 2031643, 917505, 2, 2097179, 917505, 2, 2162715, 65537, 1, 917511, 1, 5, 983047, 1, 5, 917512, 65537, 5, 983048, 65537, 5, 1048583, 1, 3, 1048584, 65537, 3, 1048595, 1, 3, 1048596, 65537, 3, 1179667, 1, 4, 1179668, 65537, 4)

[node name="EntranceLeft" type="Area2D" parent="."]
position = Vector2(-48, 280)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceLeft"]
shape = SubResource("RectangleShape2D_0cext")

[node name="EntranceRight" type="Area2D" parent="."]
position = Vector2(496, 280)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceRight"]
shape = SubResource("RectangleShape2D_ep73l")

[node name="ExitLeft" type="Marker2D" parent="."]
position = Vector2(-16, 280)

[node name="ExitRight" type="Marker2D" parent="."]
position = Vector2(464, 280)

[node name="PacManSpawn" type="Marker2D" parent="."]
position = Vector2(224, 328)

[node name="PacMan" parent="." instance=ExtResource("3_nwd3b")]
position = Vector2(224, 424)
